# excel-sql_query

./: Home.py  pyproject.toml
sql/: handle_query.py
